# advent-of-code

./: .gitignore  LICENSE
2015/: common.c  common.h  main.c  md5.c  md5.h  meson.build  set.c  template.sh  vec_impl.c
2015/common/: arena.c  arena.h  common.c  common.h  gmap.c  gmap.h  heap.c  heap.h  json.c  json.h  list.c  list.h  md5.c  parser.c  parser.h  set.c  set.h  vec.c  vec.h  vec_common.c  vec_common.h  vec_impl.c  vec_impl.h
2015/day-01/: day-01.c  day-01.h
2015/day-02/: day-02.c  day-02.h
2015/day-03/: day-03.c  day-03.h
2015/day-04/: day-04.c
2015/day-05/: day-05.c
2015/day-06/: day-06.c
2015/day-07/: day-07.c
2015/day-08/: day-08.c
2015/day-09/: day-09.c
2015/day-10/: day-10.c
2015/day-11/: day-11.c
2015/day-12/: day-12.c
2015/day-13/: day-13.c
2015/day-14/: day-14.c
2015/day-15/: day-15.c
2015/day-16/: day-16.c
2015/day-17/: day-17.c
2015/day-18/: day-18.c
2015/day-19/: day-19.c
2015/day-20/: day-20.c
2015/day-21/: day-21.c
2015/day-22/: day-22.c
2015/day-23/: day-23.c
2015/day-24/: day-24.c
2015/day-25/: day-25.c
2016/: .gitignore  justfile  node-run.js  prelude.wat  shell.nix  template.sh
2016/common/: dayUtils.wat  grid.wat  map.wat  md5.wat  set.wat  sort.wat  start.wat  vec.wat
2016/day-01/: day-01.wat
2016/day-02/: day-02.wat
2016/day-03/: day-03.wat  input-ex0.txt
2016/day-04/: day-04.wat
2016/day-05/: day-05.wat
2016/day-06/: day-06.wat
2016/day-07/: day-07.wat
2016/day-08/: day-08.wat
2016/day-09/: day-09.wat
2016/day-10/: day-10.wat
2016/day-11/: day-11.wat  input-ex0.txt
2016/day-12/: day-12.wat
2016/day-13/: day-13.wat
2016/day-14/: day-14.wat
2016/day-15/: day-15.wat
2016/day-16/: day-16.wat
2016/day-17/: day-17.wat
2016/day-18/: day-18.wat
2016/day-19/: day-19.wat
2016/day-20/: day-20.wat  input-ex0.txt
2016/day-21/: day-21.wat
2016/day-22/: day-22.wat
2017/: 2017.mwat  justfile  main.mwat  nix-just  node-run.js  shell.nix  template.sh
2022/: adv-code.cabal
2022/01/: Main.hs
2022/02/: Main.hs
2022/03/: Main.hs
2022/04/: Main.hs
2022/05/: Main.hs  Makefile
2022/06/: Main.hs
2022/07/: Main.hs
2022/08/: Main.hs
2022/09/: Main.hs
2022/10/: Main.hs
2022/11/: Main.hs
2022/12/: Main.hs
2022/13/: Main.hs
2022/14/: Main.hs
2022/15/: Main.hs
2022/16/: Main.hs  Makefile
2022/17/: Main.hs
2022/18/: Main.hs  Makefile
2022/19/: Main.hs
2023/: .gitignore  .ocamlformat  Makefile  dune-project
2023/day-17/: dune  main.ml
2023/utils/: Graphs.ml  Graphs.mli  IntRangeSet.ml  IntRangeSet.mli  Memo.ml  Memo.mli  Utils.ml  Utils.mli  dune
2024/: 2024.fsproj  2024.sln  BitGraph.fs  Day.fs  Grid.fs  Program.fs  Utils.fs
2025/: driver.js  justfile  shell.nix  template.sh
(+110 files in other folders)
