project(
    '2015', 'c',
    version : '1.0.0',
    default_options : ['warning_level=2', 'c_std=gnu2x']
)

_2015 = executable(
    '_2015',
    'day-01/day-01.c',
    'day-02/day-02.c',
    'day-03/day-03.c',
    'day-04/day-04.c',
    'day-05/day-05.c',
    'day-06/day-06.c',
    'day-07/day-07.c',
    'day-08/day-08.c',
    'day-09/day-09.c',
    'day-10/day-10.c',
    'day-11/day-11.c',
#    'day-12/day-12.c',
#    'day-13/day-13.c',
#    'day-14/day-14.c',
#    'day-15/day-15.c',
#    'day-16/day-16.c',
#    'day-17/day-17.c',
#    'day-18/day-18.c',
#    'day-19/day-19.c',
#    'day-20/day-20.c',
#    'day-21/day-21.c',
#    'day-22/day-22.c',
#    'day-23/day-23.c',
#    'day-24/day-24.c',
#    'day-25/day-25.c',
    'common/arena.c',
    'common/common.c',
    'common/md5.c',
    'common/set.c',
    'common/vec_common.c',
    'main.c',
    install : false
)

test('test', _2015)