cabal-version:      2.4
name:               adv-code
version:            0.1.0.0
author:             Andrew Cobb
maintainer:         andrew.cobb@gmail.com

-- This isn't a real package, just enough of a hack to get packages easily accessible from the subdirectoriess
executable adv-code
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0
                    , lens ^>=5.2
                    , memoize ^>= 1.1.2
    hs-source-dirs:   01, 02, 03, 04, 05
                    , 06, 07, 08, 09, 10
                    , 11, 12, 13, 14, 15
                    , 16, 17, 18, 19, 20
                    , 21, 22, 23, 24, 25
    default-language: Haskell2010
